# x-gpu-server

./: .env  .gitignore  Cargo.toml  README.md
configuration/: base.yaml
migrations/: 20220505071721_create_hosts.sql  20220505073006_create_renters.sql  20220505073024_create_rent_records.sql  20220505093415_update_host_ip.sql  20220506083627_update_host_status.sql
scripts/: init_db.sh
src/: configuration.rs  error.rs  lib.rs  model.rs  sql.rs
src/handlers/: health.rs  host.rs  mod.rs  ws.rs
src/service/: host.rs  mod.rs  ws.rs
